--- a/TourGuide/build.gradle
+++ b/TourGuide/build.gradle
@@ -1,23 +1,12 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE")
-    }
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '3.1.0'
+    id 'io.spring.dependency-management' version '1.1.0'
+    id 'jacoco'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: "jacoco"
-
-
-bootJar {
-    baseName = 'tourGuide'
-    version =  '1.0.0'
+java {
+    sourceCompatibility = '20'
 }
 
 repositories {
@@ -27,47 +16,47 @@ repositories {
     }
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile group: 'org.javamoney', name: 'moneta', version: '1.3'
-	compile group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'
-	
-    compile(name:'gpsUtil', ext:'jar')
-    compile(name:'RewardCentral', ext:'jar')
-    compile(name:'TripPricer', ext:'jar')
-    
-    testCompile("junit:junit")
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.6.RELEASE'
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation 'org.tinylog:tinylog-api:2.6.2'
+    implementation 'org.tinylog:tinylog-impl:2.6.2'
+    implementation group: 'org.javamoney', name: 'moneta', version: '1.3'
+    implementation group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'
+
+    implementation(name: 'gpsUtil', ext: 'jar')
+    implementation(name: 'RewardCentral', ext: 'jar')
+    implementation(name: 'TripPricer', ext: 'jar')
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 
-jacoco {
-    toolVersion = "0.8.4"
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        csv.enabled false
-        html.destination file("${buildDir}/jacocoHtml")
-    }
-}
-
-test.finalizedBy jacocoTestReport
-check.dependsOn jacocoTestCoverageVerification
-
-jacocoTestCoverageVerification {
-  violationRules {
-    rule {
-      limit {
-        counter = 'LINE'
-        value = 'COVEREDRATIO'
-        minimum = 0.5
-      }
-    }
-  }
-}
+//jacoco {
+//    toolVersion = "0.8.4"
+//}
+//
+//jacocoTestReport {
+//    reports {
+//        xml.enabled true
+//        csv.enabled false
+//        html.destination file("${buildDir}/jacocoHtml")
+//    }
+//}
+//
+//test.finalizedBy jacocoTestReport
+//check.dependsOn jacocoTestCoverageVerification
+//
+//jacocoTestCoverageVerification {
+//    violationRules {
+//        rule {
+//            limit {
+//                counter = 'LINE'
+//                value = 'COVEREDRATIO'
+//                minimum = 0.5
+//            }
+//        }
+//    }
+//}
