--- a/TourGuide/build.gradle
+++ b/TourGuide/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation(name: 'TripPricer', ext: 'jar')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'junit:junit:4.13.2'
 
 }
 
