--- a/TourGuide/build.gradle
+++ b/TourGuide/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.tinylog:tinylog-impl:2.6.2'
     implementation group: 'org.javamoney', name: 'moneta', version: '1.3'
     implementation group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     implementation(name: 'gpsUtil', ext: 'jar')
     implementation(name: 'RewardCentral', ext: 'jar')
